--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp public/_redirects dist/_redirects",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -31,4 +31,5 @@
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   }
+
 }
